--- a/public/stat120/Day11.html
+++ b/public/stat120/Day11.html
@@ -163,7 +163,7 @@ class: action
 ]
 .pull-right-60[
 &lt;br&gt;
-.bq.font80[
+.bq.font70[
 
 - Randomly choose a letter from A B C D E and write it down (don’t show anyone!)
 
@@ -172,16 +172,38 @@ letter.
 
 - Repeat a couple of times then switch roles.
 
+- Record your answer to .bold[Problem (1a)]
 
 ]
 
 .out-t[How often did you guess correctly?]
 ]
 
-<div class="countdown" id="timer_27222013" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_75a69110" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
+
+
+---
+
+class: middle, inverse, center
+
+
+Let's see each others results! Please enter your answer (in decimals) to (1a) in the appropriate Google form:
+
+.bq[
+
+- [Google form Section 01](https://forms.gle/4ZDAnMka76LqdUVUA)
+
+- [Google form Section 02](https://forms.gle/rEzqai9TCCsG4fep8)
+]
+
+<div class="countdown" id="timer_d5443989" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
+<code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+</div>
+
 
 ---
 
@@ -414,9 +436,9 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_3d09ad1b" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_142dd847" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
     </textarea>
