--- a/public/stat120/Day11.html
+++ b/public/stat120/Day11.html
@@ -53,7 +53,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- October 03 2023
+ October 04 2023
 
 
 ---
@@ -74,8 +74,8 @@ background-size: 160px, 100% 100%
 - **Specifying Hypotheses**: We frame these hypotheses in terms of population parameters (like mean, proportion, etc.).
 
 - **Example**: 
-  - `\(H_0\)`: The mean height of adults = 5.5 feet.
-  - `\(H_a\)`: The mean height of adults ≠ 5.5 feet.
+  - `\(H_0\)`: The mean weight of fish = 3 pounds.
+  - `\(H_a\)`: The mean weight of fish ≠ 3 pounds.
 
 .bold[Our goal is to determine which hypothesis is more likely given our sample data.]
 ]
@@ -172,14 +172,14 @@ letter.
 
 - Repeat a couple of times then switch roles.
 
-- Record your answer to .bold[Problem (1a)]
+- Record your answer in .bold[Problem (1a)]
 
 ]
 
 .out-t[How often did you guess correctly?]
 ]
 
-<div class="countdown" id="timer_75a69110" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_13a1cff9" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -187,19 +187,19 @@ letter.
 
 ---
 
-class: middle, inverse, center
+class: middle, center
 
 
-Let's see each others results! Please enter your answer (in decimals) to (1a) in the appropriate Google form:
+Let's see each other's results! Please enter your answer to (1a) in the appropriate Google form:
 
-.bq[
+.bqt[
 
 - [Google form Section 01](https://forms.gle/4ZDAnMka76LqdUVUA)
 
 - [Google form Section 02](https://forms.gle/rEzqai9TCCsG4fep8)
 ]
 
-<div class="countdown" id="timer_d5443989" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_7df0f849" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -431,12 +431,13 @@ class: action
 &lt;br&gt;
 .bql[
 
-- Let's go over some more examples at the [course helper page](https://stat120-fall23.netlify.app/)
-- We will then do a class activity together
+- Let's go over to the [course helper page](https://stat120-fall23.netlify.app/)
+- Please do the rest of the class activity and let me know if you have any questions
+- Feel free to talk to your neighbor
 ]
 ]
 
-<div class="countdown" id="timer_142dd847" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_ca4d4647" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
