--- a/static/stat120/Day11.html
+++ b/static/stat120/Day11.html
@@ -84,7 +84,7 @@ background-size: 160px, 100% 100%
 
 class: middle
 
-## Motivating Example: Extrasensory Perception
+## Another Motivating Example: Extrasensory Perception
 
 &lt;center&gt;
 &lt;img src="images/psychic.jpg" width="80%" height="70%"&gt;&lt;br&gt;
@@ -121,38 +121,40 @@ One way to test for ESP is with Zener cards:
 
 &gt; Subjects draw a card at random and telepathically communicate this to someone who then guesses the symbol
 
+
+&lt;!-- class: middle --&gt;
+
+&lt;!-- # Explaining Random Chance --&gt;
+
+
+&lt;!-- .pull-left.font80[ --&gt;
+&lt;!-- .bql.font80[ --&gt;
+&lt;!-- ## Random Chance with a Coin Toss --&gt;
+
+&lt;!-- - A fair coin has an **equal** chance of landing **heads** or **tails**. --&gt;
+&lt;!-- - Sometimes sequences like "HHHTHH" might emerge. --&gt;
+&lt;!-- - Does it mean heads are more likely? --&gt;
+
+&lt;!-- ## Toss More Times! --&gt;
+
+&lt;!-- - As we toss many more times, what happens to the ratio of heads to tails? --&gt;
+&lt;!-- ] --&gt;
+&lt;!-- ] --&gt;
+&lt;!-- .pull-right[ --&gt;
+
+&lt;!-- &lt;br&gt; --&gt;
+
+&lt;!-- ![](https://media.giphy.com/media/26gs8DLhlh9Drr7BS/giphy.gif) --&gt;
+
+&lt;!-- ] --&gt;
+
+
+&lt;!-- .footnote[[Demo: Flipping a coin](https://seeing-theory.brown.edu/basic-probability/index.html)] --&gt;
+
+&lt;!-- --- --&gt;
+
 ---
 
-class: middle
-
-# Explaining Random Chance
-
-
-.pull-left.font80[
-.bql.font80[
-## Random Chance with a Coin Toss
-
-- A fair coin has an **equal** chance of landing **heads** or **tails**.
-- Sometimes sequences like "HHHTHH" might emerge.
-- Does it mean heads are more likely?
-
-## Toss More Times!
-
-- As we toss many more times, what happens to the ratio of heads to tails?
-]
-]
-.pull-right[
-
-&lt;br&gt;
-
-![](https://media.giphy.com/media/26gs8DLhlh9Drr7BS/giphy.gif)
-
-]
-
-
-.footnote[[Demo: Flipping a coin](https://seeing-theory.brown.edu/basic-probability/index.html)]
-
----
 
 class: action
 
@@ -179,7 +181,7 @@ letter.
 .out-t[How often did you guess correctly?]
 ]
 
-<div class="countdown" id="timer_13a1cff9" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_45b323cb" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -199,7 +201,7 @@ Let's see each other's results! Please enter your answer to (1a) in the appropri
 - [Google form Section 02](https://forms.gle/rEzqai9TCCsG4fep8)
 ]
 
-<div class="countdown" id="timer_7df0f849" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_650edd01" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -437,7 +439,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_ca4d4647" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_781ab859" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
