--- a/public/stat120/Day12.html
+++ b/public/stat120/Day12.html
@@ -53,7 +53,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- April 21 2023
+ October 06 2023
 
 
 ---
@@ -90,44 +90,6 @@ Verdict:
 - .bold[Guilty:] evidence (data) “beyond a reasonable doubt” points to guilt (Statistically significant)
 - .bold[Not Guilty:] evidence (data) not beyond a reasonable doubt, but we don't know if they are truly innocent `\(\left(\mathrm{H}_{0}\right)\)`
 ]
-
----
-
-
-## Extrasensory Perception (ESP)
-
-.pull-left[
-.hjls[p= Proportion of correct guesses]
-`$$\begin{array}{l}
-\mathrm{H}_{0}: \boldsymbol{p}=\mathbf{1} / 5 \\
-\mathrm{H}_{\mathrm{a}}: \boldsymbol{p}&gt;\mathbf{1} / \mathbf{5}
-\end{array}$$`
-
-]
-
-.pull-right[
-&lt;center&gt;
-&lt;img src="images/zenner.jpg" width="50%" height="50%"&gt;&lt;br&gt;
-&lt;a&gt;&lt;/a&gt;
-&lt;/center&gt;
-
-]
-
---
-
-
-.bql.font80[
-- Suppose we try this `\(n=10\)` times and get 3 correct guesses.
-- What kinds of statistics (sample proportions) would we observe just by chance, if the null were true and ESP does not exist?
-- How can we generate this distribution?
-]
-
---
-
-.out-t[
-Simulate many samples of size `\(n=10\)` with `\(p=0.2\)` and look at the distribution of sample proportions.
-]
-
 
 ---
 
@@ -486,17 +448,17 @@ class: action
 .pull-right-60[
 
 &lt;br&gt;
-&lt;br&gt;
 .bql[
 
-- Please work on the in-class activity and we will discuss this together!
+- Let's go over to the [course helper page](https://stat120-fall23.netlify.app/)
+- Please do the class activity and let me know if you have any questions
 - Feel free to talk to your neighbor
 ]
 ]
 
-<div class="countdown" id="timer_63b080a1" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_29c17380" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
     </textarea>
