--- a/public/stat120/Day12.html
+++ b/public/stat120/Day12.html
@@ -431,7 +431,7 @@ class: middle
 # p-value and `\(H_0\)`
 
 .bql[
-- If the p-value is small, then a statistic as extreme as that observed would be unlikely if the null hypothesis were true, providing significant evidence against `\(\mathrm{H}_0\)`
+- If the p-value is small, then a statistic as extreme as that observed would be unlikely if the null hypothesis were true, providing "discernible" evidence against `\(\mathrm{H}_0\)`
 
 - .bold[The smaller the p-value, the stronger the evidence against the null hypothesis and in favor of the alternative]
 ]
@@ -456,7 +456,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_29c17380" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_69dd10f4" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
