--- a/public/index.html
+++ b/public/index.html
@@ -1180,7 +1180,7 @@ a blend of statistical acumen and cosmic curiosity. My academic journey, punctua
   <div class="media-body">
 
     <div class="section-subheading article-title mb-0 mt-0">
-      <a href="/project/internal-project/informer-timeseries/" >How to predict AAPL Stick price using an Informer model to capture long term dependencies?</a>
+      <a href="/project/internal-project/informer-timeseries/" >How to predict AAPL Stock price using an Informer model to capture long term dependencies?</a>
     </div>
 
     
