--- a/public/stat120/Day17.html
+++ b/public/stat120/Day17.html
@@ -53,7 +53,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- October 19 2023
+ October 20 2023
 
 
 ---
@@ -417,7 +417,7 @@ class: action
 
 ]
 
-<div class="countdown" id="timer_9080a2d8" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_343aacb9" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
