--- a/public/stat120/Day18.html
+++ b/public/stat120/Day18.html
@@ -53,7 +53,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- May 08 2023
+ October 23 2023
 
 
 ---
@@ -188,7 +188,7 @@ class: middle
 .pull-left-60[
 &lt;br&gt;
 .bqt.font90[
-Is there a statistically significant difference in survival rates?
+Is there a statistically discernible difference in survival rates?
 `\begin{align*}
 H_0: p_M=p_E \quad H_A: p_M \neq p_E
 \end{align*}`
@@ -380,7 +380,7 @@ class: middle
 # Tagging Penguins
 
 .bql[
-A difference in survival rates as extreme, or more extreme, than `\(16 \%\)` would occur by chance only about `\(0.08 \%\)` of the time. There is a statistically significant difference `\((\mathrm{z}=-3.34, \mathrm{p}=0.0008)\)`
+A difference in survival rates as extreme, or more extreme, than `\(16 \%\)` would occur by chance only about `\(0.08 \%\)` of the time. There is a statistically discernible difference `\((\mathrm{z}=-3.34, \mathrm{p}=0.0008)\)`
 ]
 &lt;br&gt;
 
@@ -533,18 +533,17 @@ class: action
 ]
 .pull-right-60[
 &lt;br&gt;
-.bq[
-
-Let's go over to the class activity .Rmd file and complete the tasks for today.
-
-
+.bql[
+- Let's go over to the [course helper page](https://stat120-fall23.netlify.app/)
+- Please do the class activity and let me know if you have any questions
+- Feel free to talk to your neighbor
 ]
 
 ]
 
-<div class="countdown" id="timer_31490fa8" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_6d7becc4" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
 
